openshift-bob/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-shell
  labels:
    app: bob-shell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bob-shell
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bob-shell
    spec:
      restartPolicy: Always
      serviceAccountName: bob-shell
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          name: bob-shell
          command:
            - /bin/sh
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          imagePullPolicy: Always
          volumeMounts:
            - name: workspace
              mountPath: /app
          terminationMessagePolicy: File
          image: 'docker.io/ebasso/bob-shell:1.0.6'
          args:
            - '-c'
            - while true; do sleep 3600; done
      automountServiceAccountToken: true
      serviceAccount: bob-shell
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: bob-workspace-pvc
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
