openshift-bob/service.yaml
kind: Service
apiVersion: v1

spec:
  selector:
    app: bob-shell
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10000
